1.引入font框架 2.增加原料搜索功能

--- a/application/admin/view/common/head.html
+++ b/application/admin/view/common/head.html
@@ -11,6 +11,7 @@
 	<script src="__PUBLIC__/js/ace.min.js"></script>
 
 	<link rel="stylesheet" href="__PUBLIC__/bootstrap/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="__PUBLIC__/font-awesome/4.2.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="__PUBLIC__/css/ace.min.css" />
 	<link rel="stylesheet" href="__PUBLIC__/css/form-layout.css" />
 	<link rel="stylesheet" href="__PUBLIC__/css/layout.css" />
